--- a/income-book.html
+++ b/income-book.html
@@ -10,7 +10,6 @@
       src="https://kit.fontawesome.com/8ebf6fd839.js"
       crossorigin="anonymous"
     ></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body>
@@ -31,7 +30,14 @@
               <a href="expenditure-book.html">Expenditure-Book</a>
               <a href="cutoff.html">Cut-Off Sheet</a>
               <a href="denominations.html">Denominations</a>
-              <a href="saved-records.html">Saved Records</a>
+              
+            </div>
+          </li>
+          <li class="dropdown">
+            <a>Saved Records</a>
+            <div class="dropdown-content">
+              <a href="income-records.html">Income-Record</a>
+              <a href="expenditure-records.html">Expenditure-Record</a>
             </div>
           </li>
           <li><a id="log-out">Log Out</a></li>
@@ -102,8 +108,6 @@
       <option value="Thanksgiving"></option>
       <option value="Children Offering"></option>
     </datalist>
-
-
 
 <script>
     // For the Save Button
