--- a/landing-page.html
+++ b/landing-page.html
@@ -29,7 +29,13 @@
               <a href="expenditure-book.html">Expenditure-Book</a>
               <a href="cutoff.html">Cut-Off Sheet</a>
               <a href="denominations.html">Denominations</a>
-              <a href="saved-records.html">Saved Records</a>
+            </div>
+          </li>
+          <li class="dropdown">
+            <a>Saved Records</a>
+            <div class="dropdown-content">
+              <a href="income-records.html">Income-Record</a>
+              <a href="expenditure-records.html">Expenditure-Record</a>
             </div>
           </li>
           <li><a id="log-out">Log Out</a></li>
