added users authentications

--- a/full-view.html
+++ b/full-view.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+    <script src="./assest/scripts/auth.js"></script> 
 </head>
 <body>
   <nav>
