--- a/income-book.html
+++ b/income-book.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./assest/scripts/auth.js"></script> 
   </head>
   <body>
 
