--- a/landing-page.html
+++ b/landing-page.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./assest/scripts/auth.js"></script> 
   </head>
   <body>
     <nav>
@@ -47,7 +48,8 @@
     <br>
     <br>
     <div style="text-align: center;">
-      <h1 id="userNameDisplay"> </h1>
+      <h1 id="msg"> </h1>
+      <h1 id="msg-body"> </h1>
   
       <!-- <h2>Instructions and Use of Software</h2> -->
       <br><p class="homePg">1. Once logged in, you can decide to turn off your data, and use the software completely free of charge </p><br>
@@ -58,7 +60,37 @@
       <p class="homePg">💛💛Thank You, and have a wonderful day 💛💛</p>
     <section></section>
 
-
     <script src="./assest/scripts/script.js"></script>
+
+    <!-- <script>
+      let UserCreds=JSON.parse(sessionStorage.getItem("user-creds"));
+      let UserInfo=JSON.parse(sessionStorage.getItem("user-info"));
+
+      let MsgHead=document.getElementById('msg');
+      let GreetHead=document.getElementById('msg-body');
+      let LogoutBtn= document.getElementById('log-out');
+
+      
+
+      let Signout = () =>{
+        sessionStorage.removeItem("user-creds");
+        sessionStorage.removeItem("user-info");
+        window.location.href = "./index.html";
+      }
+
+      let CheckCred = ()=>{
+        if (!sessionStorage.getItem("user-creds"))
+          window.location.href = "./index.html";
+        else{
+          //MsgHead.innerText = `User with email: "${UserCreds.email}" logged in`;
+          GreetHead.innerText = `Welcome ${UserInfo.fname}!`;
+        }
+      }
+      
+      window.addEventListener('load',CheckCred);
+      LogoutBtn.addEventListener('click', Signout);
+
+
+    </script> -->
   </body>
 </html>
