--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       import { getFirestore, doc, getDoc  } from "https://www.gstatic.com/firebasejs/11.5.0/firebase-firestore.js";
       import { getAuth, signInWithEmailAndPassword, sendPasswordResetEmail} from "https://www.gstatic.com/firebasejs/11.5.0/firebase-auth.js"; 
       
-      fetch(' https://franklinboachieyiadom.github.io/secrets.json')
+      fetch(' https://franklinboachieyiadom.github.io/Treasury_V2/secrets.json')
         .then(response => response.json())
         .then(data => {
             const apiKey = data.FIREBASE_API_KEY;
