--- a/signup.html
+++ b/signup.html
@@ -39,7 +39,7 @@
         import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/11.5.0/firebase-firestore.js";
         import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.5.0/firebase-auth.js"; 
         
-        fetch(' https://franklinboachieyiadom.github.io/secrets.json')
+        fetch(' https://franklinboachieyiadom.github.io/Treasury_V2/secrets.json')
         .then(response => response.json())
         .then(data => {
             const apiKey = data.FIREBASE_API_KEY;
