--- a/full-view.html
+++ b/full-view.html
@@ -17,8 +17,8 @@
     <label for="check" class="checkbtn">
       <i class="fas fa-bars"></i>
     </label>
-    <a href="landing-page.html" class="logo3">Ash.North Treasury Dept.</a>
-    <img class="sda_logo" src="./assest/images/sda_logo.png" alt="logo">
+    <a href="landing-page.html" class="logo3">Ash.North Treasury Dept.
+    <img class="sda_logo" src="./assest/images/sda_logo.png" alt="logo"></a>
     <ul>
       <li class="dropdown">
         <a>Menu</a>
