--- a/landing-page.html
+++ b/landing-page.html
@@ -42,23 +42,20 @@
           <li><a id="log-out">Log Out</a></li>
         </ul>
       </nav>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div style="text-align: center;">
-      <h1 id="msg"> </h1>
+  
+    <div class="landing-text">
       <h1 id="msg-body"> </h1>
   
-      <!-- <h2>Instructions and Use of Software</h2> -->
-      <br><p class="homePg">1. Once logged in, you can decide to turn off your data, and use the software completely free of charge </p><br>
-      <p class="homePg">2. The software has navigational tabs that allows you to choose your preferred operation</p><br>
-      <p class="homePg">3. You can decided to download each page as a PDF </p><br>
+      <h2 class="landing-textH2">Instructions and Use</h2>
+      <div class="landing-text-para">
+      <br><p>1. Once logged in, you can decide to turn off your data, and use the software completely free of charge </p><br>
+      <p>2. The software has navigational tabs that allows you to choose your preferred operation</p><br>
+      <p>3. You can decided to download each page as a PDF </p><br>
       <br>
       <br>
-      <p class="homePg">💛💛Thank You, and have a wonderful day 💛💛</p>
-    <section></section>
+      <p>💛💛Thank You, and have a wonderful day 💛💛</p>
+    </div>
+  </div> 
 
     <script src="./assest/scripts/script.js"></script>
 
