--- a/signup.html
+++ b/signup.html
@@ -29,7 +29,7 @@
                 <input type="password" id="signupPasswordConfirm" name="password" required>
             </div>
             <button type="submit" id="submit" class="btn signup-btn">Sign Up</button>
-            <p class="form-text">Already have an account? <a href="index.html">Login</a></p>
+            <p class="form-text">Already have an account? <a href="login.html">Login</a></p>
         </form>
     </div>
 
@@ -78,7 +78,7 @@
             });
             // Wait for 10 seconds before redirecting
             setTimeout(() => {
-              var targetPageUrl = "index.html";
+              var targetPageUrl = "login.html";
               window.location.href = targetPageUrl;
             }, 1500); // 10000 milliseconds = 10 seconds
         })
