Added a new landing page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
         <title>Ashaiman North Treasury</title>
 
-        <!-- CSS FILES -->        
+        <!-- CSS FILES -->     
+        <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -74,10 +76,10 @@
                     <div class="row justify-content-lg-center align-items-center">
 
                         <div class="col-lg-6 col-12">
-                            <h2 class="mb-4">Convinient &amp; Reliable <br> Treasury Application</h2>
+                            <h2 class="mb-4">Convenient &amp; Reliable <br> Treasury Application</h2>
 
-                            <p>Bring all the tithes into the storehouse, That there may be food in My house, And try Me now in this,” Says the <strong>Lord</strong> of hosts, </p>
-                            <p>“If I will not open for you the windows of heaven And pour out for you such blessing That there will not be room enough to receive it.</p>
+                            <p>Bring all the tithes into the storehouse, That there may be food in My house, And try Me now in this,” Says the <strong>Lord</strong> of hosts", </p>
+                            <p>If I will not open for you the windows of heaven And pour out for you such blessing That there will not be room enough to receive it.</p>
                             <p><strong>Malachi 3:10 NKJV</strong></p>
                         </div>
 
@@ -86,13 +88,16 @@
 
                             <div class="custom-block d-flex flex-column">
                                 <h6 class="text-white mb-3">For more info <br> Contact us:</h6>
-
+                               
                                 <p class="d-flex mb-0">
-                                    <i class="bi-telephone-fill custom-icon me-2"></i>
-
-                                    <a href="#">
-                                        +233 540 8961 94
-                                    </a>
+                                    <p style="color:white ;">
+                                    <i class="fa-solid fa-envelope fa-beat" style="--fa-beat-scale: 2.0;"></i>
+                                        <a href="#">franklinboachie@gmail.com</a>
+                                    </p>
+                                    <p style="color:white ;">
+                                    <i class="fa-brands fa-whatsapp fa-beat" style="--fa-beat-scale: 2.0;"></i>
+                                        <a href="#">+233 540 8961 94 </a>
+                                </p>
                                 </p>
                             </div>
                         </div>
