--- a/signup.html
+++ b/signup.html
@@ -11,6 +11,7 @@
 <body>
     <div class="form-container">
         <form class="form" id="signupForm">
+            <img class="logo" src="./assest/images/logo.png" alt="logo">
             <h2>Sign Up</h2>
             <div class="form-group">
                 <label for="signupName">Name</label>
