--- a/landing-page.html
+++ b/landing-page.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ash.North SDA Church Treasury</title>
     <link rel="icon" type="image/icon" href="./assest/images/favicon.png">
+    <link rel="stylesheet" href="./assest/styles/landingStyles.css"/>
     <link rel="stylesheet" href="./assest/styles/styles.css" />
-    <script
-      src="https://kit.fontawesome.com/8ebf6fd839.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./assest/scripts/auth.js"></script> 
+
+     <!-- Linking Google Fonts for Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,200,0,0" />
+    <!-- Linking Swiper CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+
+
+
   </head>
   <body>
     <nav>
@@ -42,8 +48,76 @@
           <li><a id="log-out">Log Out</a></li>
         </ul>
       </nav>
+
+      <div class="slider-container">
+        <!-- Slider List Items -->
+        <div class="slider-wrapper swiper-wrapper">
+          <div class="slider-item swiper-slide">
+            <div class="slide-content">
+              <!-- <h3 class="slide-subtitle">Slide 01</h3> -->
+              <h2 class="slide-title">Leviticus 27:30</h2>
+              <p class="slide-description">And all the tithe of the land, whether of the seed of the land or of the fruit of the tree, is the Lord’s. It is holy to the Lord.</p>
+              <a href="#" class="slide-button"><span>Learn More</span></a>
+            </div>
+          </div>
+          <div class="slider-item swiper-slide">
+            <div class="slide-content">
+              <!-- <h3 class="slide-subtitle">Slide 02</h3> -->
+              <h2 class="slide-title">Exodus 35:21</h2>
+              <p class="slide-description">Then everyone came whose heart was stirred, and everyone whose spirit was willing, and they brought the Lord’s offering for the work of the tabernacle of meeting, for all its service, and for the holy garments.</p>
+              <a href="#" class="slide-button"><span>Learn More</span></a>
+            </div>
+          </div>
+          <div class="slider-item swiper-slide">
+            <div class="slide-content">
+              <!-- <h3 class="slide-subtitle">Slide 03</h3> -->
+              <h2 class="slide-title">2 Chronicles 31:4</h2>
+              <p class="slide-description">Moreover he commanded the people who dwelt in Jerusalem to contribute support[a] for the priests and the Levites, that they might devote themselves to the Law of the Lord.</p>
+              <a href="#" class="slide-button"><span>Learn More</span></a>
+            </div>
+          </div>
+          <div class="slider-item swiper-slide">
+            <div class="slide-content">
+              <!-- <h3 class="slide-subtitle">Slide 04</h3> -->
+              <h2 class="slide-title">Haggai 1:4</h2>
+              <p class="slide-description">Is it time for you yourselves to dwell in your paneled houses, and this temple to lie in ruins?</p>
+              <a href="#" class="slide-button"><span>Learn More</span></a>
+            </div>
+          </div>
+          <div class="slider-item swiper-slide">
+            <div class="slide-content">
+              <!-- <h3 class="slide-subtitle">Slide 05</h3> -->
+              <h2 class="slide-title">Malachi 1:8</h2>
+              <p class="slide-description">And when you offer the blind as a sacrifice, Is it not evil? And when you offer the lame and sick, Is it not evil?
+                Offer it then to your governor! Would he be pleased with you? Would he accept you favorably? ”Says the Lord of hosts</p>
+              <a href="#" class="slide-button"><span>Learn More</span></a>
+            </div>
+          </div>
+        </div>
+        <!-- Slider Pagination -->
+        <div class="slider-controls">
+          <ul class="slider-pagination">
+            <div class="slider-indicator"></div>
+            <li class="slider-tab current">Leviticus 27:30</li>
+            <li class="slider-tab">Exodus 35:21</li>
+            <li class="slider-tab">2_Chronicles 31:4</li>
+            <li class="slider-tab">Haggai 1:4</li>
+            <li class="slider-tab">Malachi 1:8</li>
+          </ul>
+        </div>
+        <!-- Slider Navigations (Prev/Next) -->
+        <div class="slider-navigations">
+          <button id="slide-prev" class="material-symbols-rounded">arrow_left_alt</button>
+          <button id="slide-next" class="material-symbols-rounded">arrow_right_alt</button>
+        </div>
+      </div>
+      <!-- Linking Swiper Script -->
+      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+
+
   
-    <div class="landing-text">
+    <!-- <div class="landing-text">
       <h1 id="msg-body"> </h1>
   
       <h2 class="landing-textH2">Instructions and Use</h2>
@@ -55,8 +129,8 @@
       <br>
       <p>💛💛Thank You, and have a wonderful day 💛💛</p>
     </div>
-  </div> 
-
+  </div>  -->
+    <script src="./assest/scripts/landingScript.js"></script>
     <script src="./assest/scripts/script.js"></script>
 
   </body>
