Welcome user text

--- a/landing-page.html
+++ b/landing-page.html
@@ -53,8 +53,11 @@
         <!-- Slider List Items -->
         <div class="slider-wrapper swiper-wrapper">
           <div class="slider-item swiper-slide">
+           
+            <!-- //Welcoming user -->
+            <h2 id="msg-body"> </h2>
+            
             <div class="slide-content">
-              <!-- <h3 class="slide-subtitle">Slide 01</h3> -->
               <h2 class="slide-title">Leviticus 27:30</h2>
               <p class="slide-description">And all the tithe of the land, whether of the seed of the land or of the fruit of the tree, is the Lord’s. It is holy to the Lord.</p>
               <a href="#" class="slide-button"><span>Learn More</span></a>
