--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,7 @@
     <title>Ash.North SDA Church Treasury</title>
     <link rel="icon" type="image/icon" href="./assest/images/favicon.png">
     <link rel="stylesheet" href="./assest/styles/styles.css">
+    <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
@@ -32,6 +33,9 @@
             <button type="submit" id="submit" class="btn signup-btn">Sign Up</button>
             <p class="form-text">Already have an account? <a href="login.html">Login</a></p>
         </form>
+        <div id="spinner" class="spinner" style="display: none;">
+            <i class="fa fa-spinner fa-spin"></i> Signing Up...
+          </div>
     </div>
 
     <script type="module">
@@ -58,6 +62,8 @@
         const submit= document.getElementById("submit");
         submit.addEventListener("click", function(event){
         event.preventDefault()
+          // Show spinner
+        spinner.style.display = 'block';
 
         let name=document.getElementById("name").value;
         let email=document.getElementById("signupEmail").value;
@@ -70,6 +76,9 @@
             await setDoc(ref,{
                 fname:name
             })
+            // Hide spinner
+        spinner.style.display = 'none';
+
             Swal.fire({
                 position: "top-end",
                 icon: "success",
@@ -84,6 +93,9 @@
             }, 1500); // 10000 milliseconds = 10 seconds
         })
         .catch((error) => {
+            // Hide spinner
+          spinner.style.display = 'none';
+          
             let errorCode = error.code;
             let errorMessage = error.message;
             // Replace "Firebase:" with an empty string
