--- a/expenditure-records.html
+++ b/expenditure-records.html
@@ -24,14 +24,16 @@
         <img class="sda_logo" src="./assest/images/sda_logo.png" alt="logo"></a>
         <ul>
           <li class="dropdown">
-            <a>Menu</a>
-            <div class="dropdown-content">
-              <a href="income-book.html">Income-Book</a>
-              <a href="full-view.html">Full View</a>
-              <a href="expenditure-book.html">Expenditure-Book</a>
-              <a href="cutoff.html">Cut-Off Sheet</a>
-              <a href="denominations.html">Denominations</a>
-            </div>
+            <div id="admin-section" style="display: none;">
+                <a>Menu</a>
+                <div class="dropdown-content">
+                  <a href="income-book.html">Income-Book</a>
+                  <a href="full-view.html">Full View</a>
+                  <a href="expenditure-book.html">Expenditure-Book</a>
+                  <a href="cutoff.html">Cut-Off Sheet</a>
+                  <a href="denominations.html">Denominations</a>
+                </div>
+              </div>
           </li>
           <li class="dropdown">
             <a>Saved Records</a>
