--- a/income-records.html
+++ b/income-records.html
@@ -6,19 +6,10 @@
     <title>Ash.North SDA Church Treasury</title>
     <link rel="icon" type="image/icon" href="./assest/images/favicon.png">
     <link rel="stylesheet" href="./assest/styles/styles.css" />
-    <script
-      src="https://kit.fontawesome.com/8ebf6fd839.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        rel="stylesheet"
-    />
-    <link
-        rel="stylesheet"
-        href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css"
-    />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script src="./assest/scripts/auth.js"></script> 
@@ -33,14 +24,16 @@
         <img class="sda_logo" src="./assest/images/sda_logo.png" alt="logo"></a>
         <ul>
           <li class="dropdown">
-            <a>Menu</a>
-            <div class="dropdown-content">
-              <a href="income-book.html">Income-Book</a>
-              <a href="full-view.html">Full View</a>
-              <a href="expenditure-book.html">Expenditure-Book</a>
-              <a href="cutoff.html">Cut-Off Sheet</a>
-              <a href="denominations.html">Denominations</a>
-            </div>
+            <div id="admin-section" style="display: none;">
+                <a>Menu</a>
+                <div class="dropdown-content">
+                  <a href="income-book.html">Income-Book</a>
+                  <a href="full-view.html">Full View</a>
+                  <a href="expenditure-book.html">Expenditure-Book</a>
+                  <a href="cutoff.html">Cut-Off Sheet</a>
+                  <a href="denominations.html">Denominations</a>
+                </div>
+              </div>
           </li>
           <li class="dropdown">
             <a>Saved Records</a>
