--- a/landing-page.html
+++ b/landing-page.html
@@ -10,13 +10,10 @@
     <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./assest/scripts/auth.js"></script> 
-
      <!-- Linking Google Fonts for Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,200,0,0" />
     <!-- Linking Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-
-
 
   </head>
   <body>
@@ -29,6 +26,7 @@
         <img class="sda_logo" src="./assest/images/sda_logo.png" alt="logo"></a>
         <ul>
           <li class="dropdown">
+            <div id="admin-section" style="display: none;">
             <a>Menu</a>
             <div class="dropdown-content">
               <a href="income-book.html">Income-Book</a>
@@ -37,6 +35,7 @@
               <a href="cutoff.html">Cut-Off Sheet</a>
               <a href="denominations.html">Denominations</a>
             </div>
+          </div>
           </li>
           <li class="dropdown">
             <a>Saved Records</a>
@@ -117,22 +116,6 @@
       <!-- Linking Swiper Script -->
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-
-
-  
-    <!-- <div class="landing-text">
-      <h1 id="msg-body"> </h1>
-  
-      <h2 class="landing-textH2">Instructions and Use</h2>
-      <div class="landing-text-para">
-      <br><p>1. Once logged in, you can decide to turn off your data, and use the software completely free of charge </p><br>
-      <p>2. The software has navigational tabs that allows you to choose your preferred operation</p><br>
-      <p>3. You can decided to download each page as a PDF </p><br>
-      <br>
-      <br>
-      <p>💛💛Thank You, and have a wonderful day 💛💛</p>
-    </div>
-  </div>  -->
     <script src="./assest/scripts/landingScript.js"></script>
     <script src="./assest/scripts/script.js"></script>
 
