--- a/expenditure-records.html
+++ b/expenditure-records.html
@@ -55,6 +55,7 @@
             <table id="dataTable" class="table table-striped table-bordered">
                 <thead>
                     <tr>
+                        <th>USER</th>
                         <th>Date_Column</th>
                         <th>Utilities</th>
                         <th>Deaconery</th>
@@ -94,6 +95,7 @@
                         }).replace(',', ', ');
                         
                         tr.innerHTML = `
+                            <td>${row['USER']}</td>
                             <td>${formattedDate}</td>
                             <td>${row['UTILITIES']}</td>
                             <td>${row['DEACONERY']}</td>
