added the surname to the welcome username

--- a/expenditure-records.html
+++ b/expenditure-records.html
@@ -55,7 +55,7 @@
             <table id="dataTable" class="table table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th>USER</th>
+                        <th>User</th>
                         <th>Date_Column</th>
                         <th>Utilities</th>
                         <th>Deaconery</th>
