--- a/signup.html
+++ b/signup.html
@@ -15,8 +15,12 @@
             <img class="logo" src="./assest/images/logo.png" alt="logo">
             <h2>Sign Up</h2>
             <div class="form-group">
-                <label for="signupName">Name</label>
+                <label for="signupName">First Name</label>
                 <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="signupSurname">Surname</label>
+                <input type="text" id="surname" name="surname" required>
             </div>
             <div class="form-group">
                 <label for="signupEmail">Email</label>
@@ -65,6 +69,7 @@
         spinner.style.display = 'block';
 
         let name=document.getElementById("name").value;
+        let surname=document.getElementById("surname").value;
         let email=document.getElementById("signupEmail").value;
         let password=document.getElementById("signupPassword").value;
 
@@ -74,6 +79,7 @@
             var ref = doc (db,"UserAuthList",userCredential.user.uid);
             await setDoc(ref,{
                 fname:name,
+                surname:surname,
                 role:"member"
             })
             // Hide spinner
