--- a/expenditure-records.html
+++ b/expenditure-records.html
@@ -102,7 +102,7 @@
                             <td>${row['LOCAL-TRANSPORT']}</td>
                             <td>${row['FUNERAL']}</td>
                             <td>${row['CHARITY']}</td>  
-                            <td>${row['SUM']}</td>  
+                            <td>${row['TOTAL']}</td>  
                         `;
                         tableBody.appendChild(tr);
                     });
