--- a/income-records.html
+++ b/income-records.html
@@ -61,8 +61,9 @@
                         <th>C.B.F</th>
                         <th>Loose Offering</th>
                         <th>Thanks Giving</th>
-                        <th>Children Offering</th>
-                        <th>SUM</th>
+                        <th>Children Offering</th> 
+                        <th>Total</th>
+
                     </tr>
                 </thead>
                 <tbody id="tableBody">
@@ -102,7 +103,7 @@
                             <td>${row['LOOSE-OFFERING']}</td>
                             <td>${row['THANKSGIVING']}</td>
                             <td>${row['CHILDREN-OFFERING']}</td>  
-                            <td>${row['SUM']}</td>  
+                            <td>${row['TOTAL']}</td>  
                         `;
                         tableBody.appendChild(tr);
                     });
