--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@
             </div>
             <div class="form-group">
                 <label for="signupPassword">Confirm Password</label>
-                <input type="password" id="signupPasswordConfirm" name="password" required>
+                <input type="password" id="signupPasswordConfirm" name="passwordConfirm" required>
             </div>
             <button type="submit" id="submit" class="btn signup-btn">Sign Up</button>
             <p class="form-text">Already have an account? <a href="login.html">Login</a></p>
@@ -72,6 +72,18 @@
         let surname=document.getElementById("surname").value;
         let email=document.getElementById("signupEmail").value;
         let password=document.getElementById("signupPassword").value;
+        let confirmPassword = document.getElementById("signupPasswordConfirm").value;
+
+         // Check if passwords match
+         if (password !== confirmPassword) {
+            // Hide spinner
+            spinner.style.display = 'none';
+            Swal.fire({
+                text: "Passwords do not match. Please try again.",
+                icon: "error"
+            });
+            return; // Stop further execution
+        }
 
         createUserWithEmailAndPassword(auth, email, password)
         .then(async (userCredential) => {
