--- a/denominations.html
+++ b/denominations.html
@@ -21,7 +21,7 @@
         <img class="sda_logo" src="./assest/images/sda_logo.png" alt="logo"></a>
         <ul>
           <li class="dropdown">
-            <a>Menu</a>
+            <a> <i class="fa-solid fa-bars"></i> Menu</a>
             <div class="dropdown-content">
               <a class="active" href="income-book.html">Income-Book</a>
               <a href="full-view.html">Full View</a>
@@ -32,13 +32,13 @@
             </div>
           </li>
           <li class="dropdown">
-            <a>Saved Records</a>
+            <a> <i class="fa-solid fa-folder-minus"></i> Saved Records</a>
             <div class="dropdown-content">
               <a href="income-records.html">Income-Record</a>
               <a href="expenditure-records.html">Expenditure-Record</a>
             </div>
           </li>
-          <li><a id="log-out">Log Out</a></li>
+          <li><a id="log-out"> <i class="fa-solid fa-right-from-bracket"></i> Log Out</a></li>
         </ul>
       </nav>
 
