--- a/expenditure-records.html
+++ b/expenditure-records.html
@@ -25,7 +25,7 @@
         <ul>
           <li class="dropdown">
             <div id="admin-section" style="display: none;">
-                <a>Menu</a>
+                <a> <i class="fa-solid fa-bars"></i> Menu</a>
                 <div class="dropdown-content">
                   <a href="income-book.html">Income-Book</a>
                   <a href="full-view.html">Full View</a>
@@ -36,13 +36,13 @@
               </div>
           </li>
           <li class="dropdown">
-            <a>Saved Records</a>
+            <a> <i class="fa-solid fa-folder-minus"></i> Saved Records</a>
             <div class="dropdown-content">
               <a href="income-records.html">Income-Record</a>
               <a class="active" href="expenditure-records.html">Expenditure-Record</a>
             </div>
           </li>
-          <li><a id="log-out">Log Out</a></li>
+          <li><a id="log-out"> <i class="fa-solid fa-right-from-bracket"></i> Log Out</a></li>
         </ul>
       </nav>
     <div class="container mt-5">
