Added footer section

--- a/expenditure-book.html
+++ b/expenditure-book.html
@@ -94,6 +94,12 @@
     <div id="spinner" class="spinner" style="display: none;">
       <i class="fa fa-spinner fa-spin"></i> Saving...
     </div>
+
+    <footer class="footer">
+      <p>&copy; 2025 Phlashly Inc©. All rights reserved.</p>
+      <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
+    </footer>
+
     <script src="./assest/scripts/script.js"></script>
 
     <datalist id="particularsList">
