--- a/expenditure-records.html
+++ b/expenditure-records.html
@@ -45,6 +45,7 @@
           <li><a id="log-out"> <i class="fa-solid fa-right-from-bracket"></i> Log Out</a></li>
         </ul>
       </nav>
+      <br><br><br>
     <div class="container mt-5">
         <h2 class="mb-4">TOTAL EXPENDITURE</h2>
         <div class="table-responsive">
@@ -71,6 +72,13 @@
             </table>
         </div>
     </div>
+
+    <br><br><br><br><br>
+
+    <footer class="footer">
+        <p>&copy; 2025 Phlashly Inc©. All rights reserved.</p>
+        <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
+      </footer>
     <script src="./assest/scripts/script.js"></script>
 
     <script>
