--- a/denominations.html
+++ b/denominations.html
@@ -42,7 +42,7 @@
         </ul>
       </nav>
 
-
+   <br>
     <div class="container">
       <h1>Denominations Calculator</h1>
       <div class="scrollable-container">
@@ -142,11 +142,16 @@
             
           <button id="calDenom" class="btn save-btn" >Calculate</button>
           <span class="tooltiptext">Calculate</span>
-        </div>
-        
+        </div> 
     </div>
     <div id="grandTot" class="total-amount"></div>
 
+
+    <footer class="footer">
+      <p>&copy; 2025 Phlashly Inc©. All rights reserved.</p>
+      <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
+    </footer>
+  
     <script src="./assest/scripts/script.js"></script>
 
    
