--- a/full-view.html
+++ b/full-view.html
@@ -109,6 +109,12 @@
       </div>
     </div>
   </div>
+
+  <footer class="footer">
+    <p>&copy; 2025 Phlashly Inc©. All rights reserved.</p>
+    <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
+  </footer>
+
   <script src="./assest/scripts/full-view.js"></script>
   
 </body>
