--- a/login.html
+++ b/login.html
@@ -33,6 +33,11 @@
           <i class="fa fa-spinner fa-spin"></i> Signing...
         </div>
     </div>
+
+    <footer class="footer">
+      <p>&copy; 2025 Phlashly Inc©. All rights reserved.</p>
+      <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
+    </footer>
     
     <script type="module">
       
