--- a/signup.html
+++ b/signup.html
@@ -42,6 +42,13 @@
           </div>
     </div>
 
+    <br><br>
+
+    <footer class="footer">
+        <p>&copy; 2025 Phlashly Inc©. All rights reserved.</p>
+        <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
+      </footer>
+
     <script type="module">
       
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.5.0/firebase-app.js";
