--- a/cutoff.html
+++ b/cutoff.html
@@ -48,11 +48,11 @@
             <table class="styled-table">
                 <thead>
                     <tr>
-                        <th>Header 1</th>
-                        <th>Header 2</th>
-                        <th>Header 3</th>
-                        <th>Header 4</th>
-                        <th>Header 5</th>
+                        <th><input type="date"></th>
+                        <th><input type="date"></th>
+                        <th><input type="date"></th>
+                        <th><input type="date"></th>
+                        <th><input type="date"></th>
                         <th>Header 6</th>
                         <th>Header 7</th>
                         <th>Header 8</th>
