--- a/income-book.html
+++ b/income-book.html
@@ -34,8 +34,8 @@
           <li class="dropdown">
             <a><i class="fa-solid fa-folder-minus"></i> Saved Records</a>
             <div class="dropdown-content">
-              <a href="income-records.html">Income-Record</a>
-              <a href="expenditure-records.html">Expenditure-Record</a>
+              <a href="income-records.html">Income-Records</a>
+              <a href="expenditure-records.html">Expenses-Records</a>
             </div>
           </li>
           <li><a id="log-out"> <i class="fa-solid fa-right-from-bracket"></i> Log Out</a></li>
