--- a/expenditure-book.html
+++ b/expenditure-book.html
@@ -53,7 +53,7 @@
               <tr>
                 <th>#</th>
                 <th>Particulars</th>
-                <th>Amount</th>
+                <th>| Amount</th>
               </tr>
             </thead>
             <tbody>
