Added a numbering to the records table to easily sort it

--- a/expenditure-book.html
+++ b/expenditure-book.html
@@ -113,8 +113,11 @@
 
 <script>
     // For the Save Button (Submit button for the form)
-    const scriptURL =                       
-    "https://script.google.com/macros/s/AKfycbyWOFw5vM7pxj_Hd1srPRrEYa9yULbL5hFT8tHnVMMYNDLzVKOLNXcvKtwzQyAblr7P/exec"
+    const scriptURL =  "https://script.google.com/macros/s/AKfycbwfn3QAsi_s8g8pXZs_1j0p4Me3FqFhmdzSW99r2y7SiWiuI77B2oCsubCIKX78bJ01Bw/exec"                      
+    // "https://script.google.com/macros/s/AKfycbyWOFw5vM7pxj_Hd1srPRrEYa9yULbL5hFT8tHnVMMYNDLzVKOLNXcvKtwzQyAblr7P/exec"
+    // "https://script.google.com/macros/s/AKfycbyYbRcQLAY7nbW6UXB-xkqbh08TAbcnA9KEf46g7fUUrVVJx_qVLP8-7Hk69eTeiJL6/exec"
+    // "https://script.google.com/macros/s/AKfycbzDQDwIpmEJ308Fft4eH2bTJ6ac68x63rlaMXf531nKRatd7YESvz6NlxmAh06WCuXvuA/exec"
+   
     const form = document.forms["incomeTableForm"];
     form.addEventListener("submit", (e) => {
       e.preventDefault();
