--- a/expenditure-records.html
+++ b/expenditure-records.html
@@ -45,7 +45,7 @@
           <li><a id="log-out"> <i class="fa-solid fa-right-from-bracket"></i> Log Out</a></li>
         </ul>
       </nav>
-      <br><br><br>
+      <br><br>
     <div class="container mt-5">
         <h2 class="mb-4">TOTAL EXPENDITURE</h2>
         <div class="table-responsive">
@@ -53,9 +53,11 @@
             <div id="spinner2" class="spinner2" style="display: none;">
                 <i class="fa fa-spinner fa-spin"></i> Loading...
             </div>
+        <div class="table-wrapper">
             <table id="dataTable" class="table table-striped table-bordered">
                 <thead>
                     <tr>
+                        <th>Num</th>
                         <th>User</th>
                         <th>Date_Column</th>
                         <th>Utilities</th>
@@ -72,7 +74,7 @@
             </table>
         </div>
     </div>
-
+</div>
     <br><br><br><br><br>
 
     <footer class="footer">
@@ -103,6 +105,7 @@
                         }).replace(',', ', ');
                         
                         tr.innerHTML = `
+                            <td>${row['NUM']}</td>
                             <td>${row['USER']}</td>
                             <td>${formattedDate}</td>
                             <td>${row['UTILITIES']}</td>
