--- a/income-records.html
+++ b/income-records.html
@@ -45,7 +45,7 @@
           <li><a id="log-out"> <i class="fa-solid fa-right-from-bracket"></i> Log Out</a></li>
         </ul>
       </nav>
-      <br><br><br>
+      <br><br>
     <div class="container mt-5">
         <h2 class="mb-4">TOTAL INCOME</h2>
         <div class="table-responsive">
@@ -53,9 +53,11 @@
             <div id="spinner2" class="spinner2" style="display: none;">
                 <i class="fa fa-spinner fa-spin"></i> Loading...
             </div>
+        <div class="table-wrapper">
             <table id="dataTable" class="table table-striped table-bordered">
                 <thead>
                     <tr>
+                        <th>Num</th>
                         <th>User</th>
                         <th>Date_Column</th>
                         <th>Tithe</th>
@@ -73,6 +75,7 @@
             </table>
         </div>
     </div>
+</div>
 
     <br><br><br><br><br>
 
@@ -85,7 +88,8 @@
 
     <script>
         $(document).ready(function() {
-            const webAppUrl = 'https://script.google.com/macros/s/AKfycbx4pI-Q_2fcUgb3R2rPr8meTV4oLukbfFyXqqSvdxPF6kjiWDNvmxcYZPvsBpKVS2kxJA/exec';
+            const webAppUrl = 'https://script.google.com/macros/s/AKfycbz6aKEzFGa8ztzvunW_9gYJj3AMsHZkHwyslb8aQzwWKU9_D08q04E85VrB8-0nemuWdQ/exec';
+             //const webAppUrl = 'https://script.google.com/macros/s/AKfycbx4pI-Q_2fcUgb3R2rPr8meTV4oLukbfFyXqqSvdxPF6kjiWDNvmxcYZPvsBpKVS2kxJA/exec';
 
             // Show spinner
             $('#spinner2').show();
@@ -105,6 +109,7 @@
                         }).replace(',', ', ');
                         
                         tr.innerHTML = `
+                            <td>${row['NUM']}</td>
                             <td>${row['USER']}</td>
                             <td>${formattedDate}</td>
                             <td>${row['TITHE']}</td>
