Added script to full view

--- a/full-view.html
+++ b/full-view.html
@@ -116,6 +116,7 @@
   </footer>
 
   <script src="./assest/scripts/full-view.js"></script>
+  <script src="./assest/scripts/script.js"></script>
   
 </body>
 </html>
