--- a/full-view.html
+++ b/full-view.html
@@ -35,6 +35,8 @@
         <div class="dropdown-content">
           <a href="income-records.html">Income-Records</a>
           <a href="expenditure-records.html">Expenses-Records</a>
+          <a href="conference-records.html">Conference-Records</a>
+          <a href="district-records.html">District-Records</a>
         </div>
       </li>
       <li><a id="log-out"> <i class="fa-solid fa-right-from-bracket"></i> Log Out</a></li>
