--- a/conference-records.html
+++ b/conference-records.html
@@ -38,9 +38,9 @@
           <li class="dropdown">
             <a> <i class="fa-solid fa-folder-minus"></i> Saved Records</a>
             <div class="dropdown-content">
-              <a class="active" href="income-records.html">Income-Records</a>
+              <a href="income-records.html">Income-Records</a>
               <a href="expenditure-records.html">Expenses-Records</a>
-              <a href="conference-records.html">Conference-Records</a>
+              <a class="active" href="conference-records.html">Conference-Records</a>
               <a href="district-records.html">District-Records</a>
             </div>
           </li>
@@ -49,7 +49,7 @@
       </nav>
       <br><br>
     <div class="container mt-5">
-        <h2 class="mb-4">TOTAL INCOME RECORDS</h2>
+        <h2 class="mb-4">TOTAL CONFERENCE RECORDS</h2>
         <div class="table-responsive">
             <!-- Spinner -->
             <div id="spinner2" class="spinner2" style="display: none;">
@@ -66,7 +66,6 @@
                         <th>C.B.F</th>
                         <th>Loose Offering</th>
                         <th>Thanks Giving</th>
-                        <th>Children Offering</th> 
                         <th>Total</th>
 
                     </tr>
@@ -90,8 +89,7 @@
 
     <script>
         $(document).ready(function() {
-            const webAppUrl = 'https://script.google.com/macros/s/AKfycbz6aKEzFGa8ztzvunW_9gYJj3AMsHZkHwyslb8aQzwWKU9_D08q04E85VrB8-0nemuWdQ/exec';
-             //const webAppUrl = 'https://script.google.com/macros/s/AKfycbx4pI-Q_2fcUgb3R2rPr8meTV4oLukbfFyXqqSvdxPF6kjiWDNvmxcYZPvsBpKVS2kxJA/exec';
+            const webAppUrl = 'https://script.google.com/macros/s/AKfycbyuWNfL4LByPRBo9pGUk_27DHAF-xiX8yR0ubIcbpa_yqQdTdICNvUo2iqlvTml1rXg/exec';
 
             // Show spinner
             $('#spinner2').show();
@@ -118,7 +116,6 @@
                             <td>${row['C.B.F']}</td>
                             <td>${row['LOOSE-OFFERING']}</td>
                             <td>${row['THANKSGIVING']}</td>
-                            <td>${row['CHILDREN-OFFERING']}</td>  
                             <td>${row['TOTAL']}</td>  
                         `;
                         tableBody.appendChild(tr);
