--- a/expenditure-records.html
+++ b/expenditure-records.html
@@ -40,6 +40,8 @@
             <div class="dropdown-content">
               <a href="income-records.html">Income-Records</a>
               <a class="active" href="expenditure-records.html">Expenses-Records</a>
+              <a href="conference-records.html">Conference-Records</a>
+              <a href="district-records.html">District-Records</a>
             </div>
           </li>
           <li><a id="log-out"> <i class="fa-solid fa-right-from-bracket"></i> Log Out</a></li>
@@ -47,7 +49,7 @@
       </nav>
       <br><br>
     <div class="container mt-5">
-        <h2 class="mb-4">TOTAL EXPENDITURE</h2>
+        <h2 class="mb-4">TOTAL EXPENDITURE RECORDS</h2>
         <div class="table-responsive">
             <!-- Spinner -->
             <div id="spinner2" class="spinner2" style="display: none;">
