added styling colours to headers of records and books

--- a/denominations.html
+++ b/denominations.html
@@ -46,7 +46,7 @@
 
    <br>
     <div class="container">
-      <h1>Denominations Calculator</h1>
+      <h1 class="records-header" style="background-color:#007bff;">Denominations Calculator</h1>
       <div class="scrollable-container">
         <div class="table-container">
           <table id="denominations">
