--- a/full-view.html
+++ b/full-view.html
@@ -44,7 +44,7 @@
   </nav>
 
   <div class="container">
-    <h1>Full View</h1>
+    <h1 class="records-header" style="background-color:#608a06;">Full View</h1>
     <!-- <button id="downloadBtn" class="btn download-btn">Download PDF</button> -->
     <div class="scrollable-container">
       <div class="table-container">
