--- a/income-book.html
+++ b/income-book.html
@@ -46,7 +46,7 @@
 
 
     <div class="container">
-      <h1>Income Table</h1>
+      <h1 class="records-header" style="background-color:#07836c;">Income Table</h1>
       <div class="scrollable-container">
         <div class="table-container">
           <form id="incomeTableForm">
