--- a/income-records.html
+++ b/income-records.html
@@ -49,7 +49,7 @@
       </nav>
       <br><br>
     <div class="container mt-5">
-        <h2 class="mb-4">TOTAL INCOME RECORDS</h2>
+        <h2 class="records-header" style="background-color:#007bff;">TOTAL INCOME RECORDS</h2>
         <div class="table-responsive">
             <!-- Spinner -->
             <div id="spinner2" class="spinner2" style="display: none;">
