--- a/expenditure-book.html
+++ b/expenditure-book.html
@@ -46,7 +46,7 @@
 
 
     <div class="container">
-      <h1>Expenditure Table</h1>
+      <h1 class="records-header" style="background-color:#90066b;">Expenditure Table</h1>
       <div class="scrollable-container">
         <div class="table-container">
           <form id="incomeTableForm">
