spaced out the denominations calculator

--- a/denominations.html
+++ b/denominations.html
@@ -44,7 +44,7 @@
         </ul>
       </nav>
 
-   <br>
+   <br><br><br><br><br>
     <div class="container">
       <h1 class="records-header" style="background-color:#007bff;">Denominations Calculator</h1>
       <div class="scrollable-container">
@@ -147,6 +147,9 @@
         </div> 
     </div>
     <div id="grandTot" class="total-amount"></div>
+</div>
+
+    <br><br><br><br><br>
 
 
     <footer class="footer">
