Colour to the heading for cut off

--- a/cutoff.html
+++ b/cutoff.html
@@ -47,7 +47,7 @@
       
 
       <div class="container">
-        <h2 class="table-title">Conference Fund</h2>
+        <h2 class="records-header" style="background-color:#608a06;">Conference Fund</h2>
         <div class="table-responsive">
             <table class="styled-table">
                 <thead>
@@ -151,7 +151,7 @@
     <div style="display: block;">
     <br><br>
     <div class="container">
-        <h2 class="table-title">District Fund</h2>
+        <h2 class="records-header" style="background-color:#07836c;">District Fund</h2>
         <div class="table-responsive">
             <table class="styled-table">
                 <thead>
